[package]
name = "audio-limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30"
cpal = "0.15"
ringbuf = "0.4"
atomic_float = "1.1.0"
config-file2 = "0.4.0"
directories = "6.0.0"
serde = "1.0.217"
sys-locale = "0.3.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
